[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "util"
path = "src/lib.rs"

[dependencies]
zxcvbn = "2.2.1"
google-authenticator = "0.3.0" # new version requires building libs so we'll stay on this one
bcrypt = "^0.14"
chrono = "^0.4"
actix-web = "^4"

error = { path = "../error" }
