[package]
name = "util"
version = "0.9.0"
edition = "2021"
authors = ["Tibor Hudik <hello@hudik.eu>"]
readme = "README.md"
license-file = "../LICENSE.md"
description = "Simple helper function that are used all around the application and don't have a home in any crate in particular"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "util"
path = "src/lib.rs"

[dependencies]
zxcvbn = "2.2.1"
google-authenticator = "0.3.0" # new version requires building libs so we'll stay on this one
bcrypt = "^0.14"
chrono = "^0.4"
qstring = "^0.7"
actix-web = "^4"
url = "^2"

error = { path = "../error" }
